<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="42dp"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="563dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/sign_in"
            android:layout_marginBottom="20dp"
            android:textColor="@color/primary_text"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inpotEmill"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ii"
            android:hint="User name"
            android:imeOptions="actionNext"
            android:importantForAccessibility="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle=""
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inpotPassword"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ii"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />


        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/roo"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:text="Remember me"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/createnewaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginTop="30dp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="13sp" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </LinearLayout>

</LinearLayout>